# Mesh-Simplification-QEM

./: CMakeLists.txt  LICENSE  README.md
dependencies/glad/: glad.h
shaders/: mesh.frag
src/: glad.c  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h
